--- a/PongPong.html
+++ b/PongPong.html
@@ -70,10 +70,11 @@
         
         //movement of ai
         function computerMovement(){
+            var paddle2YCenter = paddle2Y + (PADDLE_HEIGHT/2);
             if(paddle2Y < ballY) {
-                paddle2Y = paddle2Y + 6;
+                paddle2Y += 6;
             } else {
-                paddle2Y = paddle2Y - 6;
+                paddle2Y -= 6;
             }
         }
 
@@ -86,8 +87,8 @@
         function moveEverything() {
             computerMovement();
 
-            ballX = ballX + ballSpeedX;
-            ballY = ballY + ballSpeedY;
+            ballX += ballSpeedX;
+            ballY += ballSpeedY;
 
             if(ballX < 0) {
                 //ballSpeedX = -ballSpeedX;
