--- a/PongPong.html
+++ b/PongPong.html
@@ -71,9 +71,9 @@
         //movement of ai
         function computerMovement(){
             var paddle2YCenter = paddle2Y + (PADDLE_HEIGHT/2);
-            if(paddle2Y < ballY) {
+            if(paddle2YCenter < ballY - 35) {
                 paddle2Y += 6;
-            } else {
+            } else if (paddle2YCenter > ballY + 35) {
                 paddle2Y -= 6;
             }
         }
